--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
   </script>
 
   <!-- include source files here... -->
-  <script src="hashTable.js"></script>
+  <script src="DoublyLinkListHashTable.js"></script>
 
   <!-- include spec files here... -->
-  <script src="spec/hashTable.js"></script>
+  <script src="spec/DoublyLinkListHashTable.js"></script>
 
   <script>mocha.run()</script>
 </body>
